# STEPper

./: .gitignore  README.md  __init__.py  importer.py  main.py  stepanalyzer.py  stepper_native.cp313-win_amd64.pyd  trimesh.py
.github/workflows/: release.yml
OCC/: __init__.py
OCC/Core/: AIS.py  APIHeaderSection.py  Adaptor2d.py  Adaptor3d.py  Addons.py  AdvApp2Var.py  AdvApprox.py  AppBlend.py  AppCont.py  AppDef.py  AppParCurves.py  AppStd.py  AppStdL.py  Approx.py  ApproxInt.py  Aspect.py  BOPAlgo.py  BOPDS.py  BOPTools.py  BRep.py  BRepAdaptor.py  BRepAlgo.py  BRepAlgoAPI.py  BRepApprox.py  BRepBlend.py  BRepBndLib.py  BRepBuilderAPI.py  BRepCheck.py  BRepClass.py  BRepClass3d.py  BRepExtrema.py  BRepFeat.py  BRepFill.py  BRepFilletAPI.py  BRepGProp.py  BRepIntCurveSurface.py  BRepLProp.py  BRepLib.py  BRepMAT2d.py  BRepMesh.py  (+583 more)
native/: CMakeLists.txt  stepper_native.cpp
